[WIP] Implementando update Allocation
