# service/src/main/java/br/com/sw2you/realmeet/controller/AllocationController.java
@@ -6,6 +6,7 @@ import static java.util.concurrent.CompletableFuture.supplyAsync;
 import br.com.sw2you.realmeet.api.facade.AllocationsApi;
 import br.com.sw2you.realmeet.api.model.AllocationDTO;
 import br.com.sw2you.realmeet.api.model.CreateAllocationDTO;
+import br.com.sw2you.realmeet.api.model.UpdateAllocationDTO;
 import br.com.sw2you.realmeet.service.AllocationService;
 import br.com.sw2you.realmeet.util.ResponseEntityUtils;
 import java.util.concurrent.CompletableFuture;
@@ -34,4 +35,9 @@ public class AllocationController implements AllocationsApi {
         return runAsync(() -> service.deleteAllocation(id), controllersExecutor).thenApply(ResponseEntityUtils::noContent);
     }
 
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> updateAllocation(Long id, UpdateAllocationDTO updateAllocationDTO) {
+        return runAsync(() -> service.updateAllocation(id, updateAllocationDTO), controllersExecutor).thenApply(ResponseEntityUtils::noContent);
+    }
+    
 }
